--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "axios": "^1.11.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "proxy": "http://localhost:4000"
   }
 }
